src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Banner__c</fullName>
        <description>Document ID in Prod is 015G000000QVc8r</description>
        <formula>IF(Named_Account__c, IMAGE(&quot;/servlet/servlet.FileDownload?file= 015G000000QVc8r&quot;,&quot;Named Account&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this is a Named Account, the record shows the Named Account Bar.</inlineHelpText>
        <label>Named Account Banner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Level_Travel_Notes__c</fullName>
        <label>Account-Specific Travel Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Specific_Billing_Invoicing__c</fullName>
        <label>Account-Specific Billing &amp; Invoicing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Description__c</fullName>
        <label>Address Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Last_Opportunity_Created__c</fullName>
        <label>Date Last Opportunity Created</label>
        <summarizedField>Opportunity.CreatedDate</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Entity_specific_LOA_verbiage__c</fullName>
        <inlineHelpText>Please enter any language that needs to appear on the LOA for this client. It will automatically generate on the LOA template.</inlineHelpText>
        <label>Account-specific LOA verbiage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exclude_from_COORD_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, suppress the creation of COORDination activities for related Training Events.</description>
        <label>Exclude from COORD Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ext__c</fullName>
        <label>Ext.</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FID__c</fullName>
        <inlineHelpText>Federal Identification Number</inlineHelpText>
        <label>FID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Start_Date__c</fullName>
        <label>Fiscal Year Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flag_as_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag as Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email Invoice</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Printed Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_SLX_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy SLX ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Migrate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDA_Received_Date__c</fullName>
        <label>NDA Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Named Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Bar__c</fullName>
        <description>Document in Prod is ID 015G000000QVeSU</description>
        <formula>IF(Named_Account__c, IMAGE(&quot;/servlet/servlet.FileDownload?file= 015G000000QVc8w&quot;,&quot;Named Account&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this is a Named Account, the record shows the Named Bar, to be used in List Views.</inlineHelpText>
        <label>Named Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldSalesforceID__c</fullName>
        <externalId>true</externalId>
        <label>OldSalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payable_Period__c</fullName>
        <inlineHelpText>If the company indicates a specific number of days to pay an invoice, provide that here.</inlineHelpText>
        <label>Account-Specific Payable Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Power of One</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Account_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>SP Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>STAR12_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>STAR12 Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduling_Notes__c</fullName>
        <label>Account-Specific Scheduling Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Billing_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Billing Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt_No__c</fullName>
        <label>Tax Exempt No.</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_Sales__c</fullName>
        <inlineHelpText>For this account, how many sold deals came in?</inlineHelpText>
        <label>Total Number Sales</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Open_Opportunities__c</fullName>
        <inlineHelpText>Roll-up from Opportunities</inlineHelpText>
        <label>Total Open Opportunties</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Won_All_time__c</fullName>
        <inlineHelpText>For Won Opportunities. Does not encompass Cancelled Training Events.</inlineHelpText>
        <label>Total Won All-time</label>
        <summarizedField>Opportunity.TE_Performed_RollUp__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Won_Revenue__c</fullName>
        <inlineHelpText>Roll-up from Opportunities</inlineHelpText>
        <label>Total Won Revenue</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trainer_Notes__c</fullName>
        <label>Account-Specific Trainer Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X180_Days_since_last_Activity__c</fullName>
        <formula>TODAY()- LastActivityDate &gt;= 180</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>180 Days since last Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X90_days_since_last_activity__c</fullName>
        <formula>TODAY()- LastActivityDate  &gt;= 90</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>90 days since last activity</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Only_Ops_Manages_Trainers</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT( $User.ProfileId = &quot;00eG0000001GB2Q&quot; /*System Admin profile*/ ),
NOT( $User.ProfileId = &quot;00eG0000000S5pj&quot; /*Operations profile*/),
ISCHANGED(LastModifiedDate),
OR(Id = &apos;001G000001m505R&apos;,
Id = &apos;001G000001m6sFw&apos;,
Id = &apos;001G000001maGIe&apos;))</errorConditionFormula>
        <errorMessage>Only operations and system administrators may change SkillPath Trainer accounts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Changing_Ownership</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
  NOT( ISPICKVAL( Owner.User_Team__c , &quot;BDRs&quot; )),
  NOT( ISPICKVAL( Owner.User_Team__c, &quot;POOL&quot; )),
  NOT( ISPICKVAL( Owner.User_Team__c, &quot;Former&quot; ))
) &amp;&amp;
 ISCHANGED(  OwnerId  )&amp;&amp; 
NOT(OR( 
$User.ProfileId = &quot;00eG0000001GB2Q&quot; /*System Admin profile*/, 
$User.ProfileId = &quot;00eG0000000S5pj&quot; /*Operations profile*/,
$User.ProfileId = &quot;00eG0000000S7n2&quot; /*Sales Managers profile*/,
$User.Id = PRIORVALUE(OwnerId)
))</errorConditionFormula>
        <errorMessage>The Ownership may not be changed due to Pool Rules.</errorMessage>
    </validationRules>
</CustomObject>